nestum/tests/ui/fail_external_mismatch.stderr
error: field type Other does not match external enum path crate::a::Inner; use the enum ident as the field type
  --> tests/ui/fail_external_mismatch.rs:13:10
   |
13 |     Wrap(Other),
   |          ^^^^^
